Launcher3: Add an about section
Change-Id: I67aa13f6f6ce660f036e97d8433277bbd483ce99
[nurkeinneid: Adapted to A14 QPR2]
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/naap_strings.xml
+++ b/res/values/naap_strings.xml
@@ -417,4 +417,11 @@
     <!-- Toast for Clear All, App Locked n Unlocked -->
     <string name="action_toast_enabled_title">Action Toasts</string>
     <string name="action_toast_enabled_summary">Enable-disable Toast clear all</string>
+
+    <!-- About info -->
+    <string name="about_everest_title" translatable="false">@string/everest_app_name</string>
+    <string name="about_thanks_cat">Special thanks to</string>
+    <string name="about">About</string>
+    <string name="about_summary">Info about the Everest Launcher</string>
+    <string name="about_app_version">Version 1.1</string>
 </resources>
