--- a/res/values/naap_strings.xml
+++ b/res/values/naap_strings.xml
@@ -397,4 +397,7 @@
     <string name="quick_event_weather_text_summary">Display current weather condition summary</string>
 
     <string name="intent_no_app_clock_found">Unable to find calendar or clock activity</string>
+
+    <!-- Preference default value -->
+    <string name="pref_value_default">Default</string>
 </resources>
