--- a/res/xml/app_info_preferences.xml
+++ b/res/xml/app_info_preferences.xml
@@ -38,7 +38,7 @@
         android:icon="@drawable/ic_app_info_source"
         android:persistent="false" />
 
-    <Preference
+    <com.android.launcher3.settings.preference.ReloadingListPreference
         android:key="pref_app_info_icon_pack"
         android:title="@string/icon_pack_title"
         android:layout="@layout/settings_layout"
