Launcher3: Add Google Lens scan button to recents
And a squash of:

Launcher3: Restart launcher on changing google search/lens app

idoybh (YAAP): Keep clear all rightmost

Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Co-authored-by: hundeva <hundeva@gmail.com>
Change-Id: If00a4542ff7134ce4b84de3894f800d2b9a4f797
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -141,4 +141,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s available | %2$s</string>
     <string name="recents_meminfo_title">Memory info</string>
+
+    <!-- Recents -->
+    <string name="action_lens">Lens</string>
 </resources>
