--- a/res/values/naap_dimens.xml
+++ b/res/values/naap_dimens.xml
@@ -28,4 +28,8 @@
     <dimen name="quickspace_subtitle_size">16sp</dimen>
     <dimen name="quickspace_alternate_title_size">18sp</dimen>
     <dimen name="quickspace_alternate_subtitle_size">16sp</dimen>
+    
+    <!-- Extra bottom margin for overview TaskViews -->
+    <dimen name="overview_task_extra_top_margin">40dp</dimen>
+    <dimen name="overview_task_extra_bottom_margin">40dp</dimen>
 </resources>
