Launcher3: Integrate themed icons picker to Launcher3
Change-Id: I666cfd9c6164f85109643ea012e7a4ee525fdfbd
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/res/values/naap_strings.xml
+++ b/res/values/naap_strings.xml
@@ -16,6 +16,11 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Themed Icons -->
+    <string name="themed_icons_category_title">Themed Icons</string>
+    <string name="themed_icon_pack_disabled">Disabled</string>
+    <string name="icon_pack_no_browser">There\'s no available browser</string>
+
     <!-- Application name -->
     <string name="naap_app_name" translatable="false">NAAP Launcher</string>
 
@@ -162,7 +167,7 @@
     <string name="recents_shake_clear_all_title">Shake phone to clear all tasks</string>
 
     <!-- All apps themed icons -->
-    <string name="pref_themed_icons_title">Themed icons</string>
+    <string name="pref_themed_icons_title">Apply themed icons to app drawer</string>
     <string name="pref_themed_icons_summary">Follow themed icons used on home screen</string>
 
     <!-- AppInfo -->
@@ -172,6 +177,10 @@
     <string name="app_info_last_update">Last update</string>
     <string name="app_info_version">Version</string>
     <string name="app_info_more">More</string>
+
+    <!-- Force monochrome icons -->
+    <string name="pref_force_monochrome_themed_icons_title">Force Monochrome themed icons</string>
+    <string name="pref_force_monochrome_themed_icons_summary">Generate monochromatic icons, if it is not provided by the app (requires re-toggling of themed icons)</string>
 
     <!-- Icon pack -->
     <string name="icon_pack_title">Icon pack</string>
