Launcher3: Never disable weather settings
If Omnijaws is disabled in settings, we haven't been able to reenable it.
It was unreachable, because it depended on the show-weather-switch, which
depends on Omnijaws beeing activated.
WIth keeping the settings enabled, we can switch Omnijaws on again.

Signed-off-by: jenslody <jens@jenslody.de>

--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -161,8 +161,7 @@
 
         <Preference
             android:title="@string/weather_settings_title"
-            android:summary="@string/weather_settings_summary"
-            android:dependency="pref_quickspace_weather">
+            android:summary="@string/weather_settings_summary">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="org.omnirom.omnijaws"
