--- a/res/values/naap_strings.xml
+++ b/res/values/naap_strings.xml
@@ -15,43 +15,55 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
     <!-- Application name -->
+    <string name="naap_app_name" translatable="false">NAAP Launcher</string>
+
     <!-- Folder titles -->
+    <string name="google_folder_title" translatable="false">Google</string>
+
     <!-- General -->
-    <string name="settings_title">Home settings</string>
+    <string name="settings_title">NAAP Launcher</string>
+
     <!-- Categories -->
-    <string name="home_category_title">ᱚᱲᱟᱜ ᱥᱠᱨᱤᱱ</string>
-    <string name="home_category_summary">ᱜᱩᱜᱟᱹᱞ ᱯᱮᱱᱟᱞ ᱟᱨ ᱟᱭᱢᱟ ᱡᱤᱱᱤᱥ ᱥᱮᱴ ᱢᱮ</string>
-    <string name="icons_category_title">ᱟᱭᱠᱚᱱᱠᱚ</string>
+    <string name="home_category_title">Home screen</string>
+    <string name="home_category_summary">Set Google now panel and more</string>
+    <string name="icons_category_title">Icons</string>
     <string name="icons_category_summary">Set icon size and more</string>
-    <string name="app_drawer_category_title">ᱮᱯ ᱰᱨᱚᱣᱟᱹᱨ</string>
-    <string name="app_drawer_category_summary">ᱟᱢᱟᱜ ᱮᱯ ᱰᱨᱚᱣᱟᱹᱨ ᱠᱚᱥᱴᱚᱢᱟᱭᱤᱡᱽ ᱢᱮ</string>
+    <string name="app_drawer_category_title">App drawer</string>
+    <string name="app_drawer_category_summary">Customize your app drawer</string>
     <string name="recents_category_title">Recents</string>
     <string name="recents_category_summary">Revamp the overview screen</string>
-    <string name="misc_category_title">ᱢᱤᱥᱮᱞᱟᱱᱤᱭᱟᱹᱥ</string>
-    <string name="misc_category_summary">ᱚᱞᱜᱟ ᱚᱯᱥᱚᱱᱠᱚ</string>
+    <string name="misc_category_title">Miscellaneous</string>
+    <string name="misc_category_summary">Other options</string>
     <string name="general_category_title">General</string>
     <string name="interface_category_title">Interface</string>
     <string name="quickspace_category_title">Quickspace</string>
     <string name="search_bar_category_title">Search bar</string>
     <string name="actions_category_title">Quick actions</string>
+
     <!-- Developer options -->
-    <string name="dev_options_title">ᱰᱮᱵᱽᱷᱞᱚᱯᱟᱹᱨ ᱚᱯᱥᱚᱱ ᱠᱚ</string>
-    <string name="dev_options_summary">ᱟᱢᱟᱜ ᱨᱤᱥᱠ ᱛᱮ ᱡᱟᱦᱟᱱᱟᱜ ᱩᱠᱩ ᱯᱷᱤᱪᱚᱨᱠᱚ ᱮᱢ ᱪᱷᱚᱭ ᱢᱮ</string>
+    <string name="dev_options_title">Developer options</string>
+    <string name="dev_options_summary">Enable some hidden features at your own risk</string>
+
     <!-- Edit workspace -->
     <string name="settings_lock_layout_title">Lock layout</string>
     <string name="settings_lock_layout_summary_on">Icons and widgets can\'t be added, removed and moved on the homescreen</string>
     <string name="settings_lock_layout_summary_off">Icons and widgets can be added, removed and moved on the homescreen</string>
     <string name="settings_edit_widgets_error">It\'s not possible to add widgets to the home screen</string>
+
     <!-- Hide labels -->
     <string name="desktop_show_labels">Icon labels on desktop</string>
     <string name="drawer_show_labels">Icon labels in drawer</string>
+
     <!-- Settings title to show Google Now at -1 screen on launcher. [CHAR LIMIT=50] -->
     <string name="title_show_google_app">Swipe to access Google app</string>
+    <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
     <!-- Settings message explaining when the -1 screen is available on an LTR device. [CHAR LIMIT=100] -->
-    <string name="msg_minus_one_on_left">When you swipe left from main Home screen</string>
+    <string name="msg_minus_one_on_left">When you swipe right from main home screen</string>
     <!-- Settings message explaining when the -1 screen is available on an RTL device. [CHAR LIMIT=100] -->
-    <string name="msg_minus_one_on_right">When you swipe right from main Home screen</string>
+    <string name="msg_minus_one_on_right">When you swipe left from main home screen</string>
+
     <!-- Trust apps -->
     <string name="trust_apps_manager_name">Hidden &amp; Protected apps</string>
     <string name="trust_apps_auth_manager">Unlock to manage the hidden and protected apps</string>
@@ -61,9 +73,11 @@
     <string name="trust_apps_help">Help</string>
     <string name="trust_apps_info_hidden">Hidden apps and their widgets are hidden from the drawer</string>
     <string name="trust_apps_info_protected">Protected apps require authentication to be opened from the launcher</string>
+    
     <!-- Suggestions -->
     <string name="suggestion_pref_screen_title">Suggestions</string>
     <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
+
     <!-- Pause apps shortcut -->
     <string name="pause">Pause</string>
     <string name="pause_apps_dialog_title">Pause %1$s?</string>
@@ -71,26 +85,30 @@
     <string name="paused_apps_dialog_title">App paused</string>
     <string name="paused_apps_dialog_message">%1$s was directly paused from the launcher</string>
     <string name="paused_apps_drop_target_label">Pause app</string>
+
     <!-- DT2S -->
-    <string name="pref_sleep_gesture_title">ᱜᱤᱛᱤᱡ ᱞᱟᱹᱜᱤᱫ ᱵᱟᱨ ᱡᱮᱠᱷᱟ ᱚᱛᱟᱭ ᱢᱮ</string>
+    <string name="pref_sleep_gesture_title">Double tap to sleep</string>
     <string name="pref_sleep_gesture_summary">Double tap on empty space for screen off</string>
+
     <!-- Custom seekbar -->
-    <string name="custom_seekbar_value">ᱮᱞ:<xliff:g id="v">%s</xliff:g></string>
-    <string name="custom_seekbar_default_value">ᱢᱩᱞ ᱯᱷᱮᱲᱟᱛ</string>
-    <string name="custom_seekbar_default_value_to_set">ᱢᱩᱞ ᱯᱷᱮᱲᱟᱛ ᱮᱞ:<xliff:g id="v">%s</xliff:g>\nᱥᱮᱴ ᱞᱟᱹᱜᱤᱫ ᱡᱩᱨ ᱥᱮ ᱚᱛᱟᱭ ᱢᱮ</string>
-    <string name="custom_seekbar_default_value_is_set">ᱢᱩᱞ ᱯᱷᱮᱲᱟᱛ ᱮᱞ ᱥᱮᱴ ᱮᱱᱟ</string>
+    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
+    <string name="custom_seekbar_default_value">by default</string>
+    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
+    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
+
     <!-- Icon size -->
     <string name="icon_size_title">Icon size</string>
+
     <!-- Font size -->
     <string name="font_size_title">Font size</string>
-    <!-- App label - max lines -->
-    <string name="icon_max_lines_title">Max lines for app label</string>
+
+    <!-- App label -->
+    <string name="icon_two_lines_title">Use two lines for app label</string>
+   
     <!-- Kill App recents action shortcut -->
     <string name="recent_task_option_kill_app">Kill</string>
     <string name="recents_app_killed">App killed</string>
-    <!-- Taskbar -->
-    <string name="pref_allow_phone_taskbar_title">Use taskbar</string>
-    <string name="pref_allow_phone_taskbar_summary">For opening and switching apps anywhere</string>
+
     <!-- Hotseat searchbar -->
     <string name="label_search">Search</string>
     <string name="label_lens">Google Lens</string>
@@ -102,69 +120,91 @@
     <string name="dock_theme_title">Themed icons</string>
     <string name="dock_theme_summary">Use themed icons for search bar</string>
     <string name="search_radius_title">Corner radius</string>
+
     <!-- Hotseat Background -->
     <string name="hotseat_bg_title">Hotseat background</string>
     <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
+
     <!-- Background opacity -->
-    <string name="background_opacity_title">ᱵᱮᱠᱜᱽᱨᱟᱩᱸᱰ ᱚᱯᱟᱥᱤᱴᱭ</string>
+    <string name="background_opacity_title">Background opacity</string>
+
     <!-- Wallpaper scrolling -->
     <string name="allow_wallpaper_scrolling">Wallpaper scrolling</string>
     <string name="allow_wallpaper_scrolling_summary">Wallpaper scrolling effect for multiple screens</string>
+
     <!-- Wallpaper zooming -->
     <string name="allow_wallpaper_zooming">Wallpaper zooming</string>
     <string name="allow_wallpaper_zooming_summary">Zoom in or out the wallpaper when using drawer or recent apps</string>
+
     <!-- Homescreen Statusbar -->
     <string name="show_statusbar_title">Status Bar</string>
+
     <!-- Top shadow -->
     <string name="show_top_shadow">Top shadow</string>
+
     <!-- Row Height -->
     <string name="row_height_title">Row height</string>
+
     <!-- Memory info -->
     <string name="meminfo_text">%1$s available | %2$s</string>
     <string name="recents_meminfo_title">Memory info</string>
+    
     <!-- Background blur -->
     <string name="background_blur_title">Background blur depth</string>
     <string name="background_blur_summary">Set blur depth level for recents and app drawer</string>
+
     <!-- Recents icons -->
     <string name="recents_screenshot_title">Screenshot</string>
     <string name="recents_clear_all_title">Clear all</string>
     <string name="recents_lens_title">Lens</string>
+
     <!-- Shake Clear Recents -->
     <string name="recents_shake_clear_all_title">Shake phone to clear all tasks</string>
+
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">Themed icons</string>
     <string name="pref_themed_icons_summary">Follow themed icons used on home screen</string>
+
     <!-- AppInfo -->
+    <string name="app_info_version_value" translatable="false">%1$s (%2$d)</string>
     <string name="app_info_source">Source</string>
     <string name="app_info_source_system">System</string>
     <string name="app_info_last_update">Last update</string>
     <string name="app_info_version">Version</string>
     <string name="app_info_more">More</string>
+
     <!-- Icon pack -->
-    <string name="icon_pack_title">ᱟᱭᱠᱚᱱ ᱯᱮᱠ</string>
+    <string name="icon_pack_title">Icon pack</string>
     <string name="icon_pack_default_label">Default</string>
     <string name="icon_pack_add">Install more</string>
     <string name="icon_pack_no_market">There\'s no available app store</string>
+
     <!-- Parallax -->
     <string name="short_parallax_title">Allow short parallax</string>
     <string name="short_parallax_summary">Enable full wallpaper scroll effect on smaller numbers of pages instead of cropping the wallpaper</string>
     <string name="single_page_center_title">Single page center</string>
     <string name="single_page_center_summary">Center wallpaper if only using a single page</string>
+
     <!-- App drawer searchbar -->
     <string name="drawer_search_title">App search bar</string>
     <string name="drawer_search_summary">Search bar on top of the app drawer</string>
+
     <!-- Restart launcher -->
     <string name="pref_restart_title">Restart</string>
     <string name="pref_restart_summary">Restart the launcher manually to apply any pending settings</string>
     <string name="restarting_launcher">Restarting launcher...</string>
     <string name="restarting_launcher_changes">Restarting launcher to apply changes...</string>
     <string name="updating_launcher_components">Restarting launcher to update launcher components...</string>
+
     <!-- QuickSpace -->
-    <string name="show_quickspace_title">ᱢᱤᱫᱽ ᱡᱷᱚᱞᱠ ᱛᱮ</string>
+    <string name="show_quickspace_title">At A Glance</string>
     <string name="show_quickspace_summary">Show at the top of your home screen</string>
+    <string name="quickspace_date_format" translatable="false">EEE, MMM d</string>
+    <string name="quickspace_date_format_minimalistic" translatable="false">EEEE, MMMM d</string>
+
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">crDroid ᱨᱮ ᱥᱟᱹᱜᱩᱱ ᱫᱟᱨᱟᱢ!</string>
-    <string name="quick_event_rom_intro_welcome_ext">crDroid time!</string>
+    <string name="quick_event_rom_intro_welcome">Welcome to Naap!</string>
+    <string name="quick_event_rom_intro_welcome_ext">Naap time!</string>
     <string-array name="welcome_message_variants">
         <item>Thank you for choosing us</item>
         <item>Loving us? Send us a beer</item>
@@ -173,6 +213,7 @@
         <item>Tap here to begin</item>
         <item>We love you 3000</item>
     </string-array>
+
     <!-- QuickSpace: QuickEvent: Greetings -->
     <string name="quickspace_grt_morning">Good morning.</string>
     <string name="quickspace_grt_evening">Good evening.</string>
@@ -181,26 +222,31 @@
     <string name="quickspace_grt_general">Good day.</string>
     <string name="quickspace_ext_one">Today is</string>
     <string name="quickspace_ext_two">It\'s</string>
+
     <!-- QuickSpace: QuickEvent: Ambient Play -->
     <string name="qe_now_playing_unknown_artist">Unknown Artist</string>
     <string name="qe_now_playing_ext_one">Now playing</string>
     <string name="qe_now_playing_by">By</string>
+
     <!-- Quickspace Now Playing -->
     <string name="quickspace_now_playing_title">Now playing</string>
     <string name="quickspace_now_playing_summary">Show the song you\'re playing</string>
+
     <!-- Quickspace alternative view -->
-    <string name="quickspace_alternate_style_title">Minimalistic style</string>
-    <string name="quickspace_alternate_style_summary">Switch to modern style</string>
+    <string name="quickspace_alternate_style_title">Extended style</string>
+    <string name="quickspace_alternate_style_summary">Switch to extended style</string>
+
     <!-- Quickspace PSA - Custom messages for the glance -->
     <string name="quickspace_psa_title">Random messages</string>
     <string name="quickspace_psa_summary">Make your companion more lively with random messages</string>
+
     <string-array name="quickspace_psa_morning">
-        <item>ᱥᱟᱹᱜᱩᱱ ᱥᱮᱛᱟᱜ!</item>
-        <item>ᱥᱟᱹᱜᱤᱱ ᱥᱮᱛᱟᱜ, ᱨᱚᱠ ᱨᱮᱭᱟᱜ ᱚᱠᱛᱚ!</item>
-        <item>ᱟᱹᱰᱤ ᱵᱮᱥ ᱫᱤᱱ ᱠᱟᱱᱟ!</item>
-        <item>ᱵᱮᱥ ᱫᱤᱱ ᱛᱟᱦᱮᱸᱱ ᱢᱟ!</item>
-        <item>᱕ ᱴᱤᱯᱤᱡ ᱱᱮᱯ ᱪᱮᱫᱮᱢ ᱢᱮᱱᱮᱜᱼᱟ?</item>
-        <item>ᱱᱚᱶᱟ ᱯᱟᱸᱨᱩᱴᱤ ᱵᱚᱱ ᱤᱫᱤᱭᱟ ᱾</item>
+        <item>Good morning!</item>
+        <item>Good morning, time to rock!</item>
+        <item>What a beautiful day!</item>
+        <item>Have a nice day!</item>
+        <item>What about a small 5 minutes nap?</item>
+        <item>Let\'s get this bread.</item>
         <item>Mornings are a fresh canvas for your daily masterpiece.</item>
         <item>Embrace the sunrise of opportunity each morning.</item>
         <item>In the early light, find the power to illuminate your path.</item>
@@ -299,38 +345,38 @@
         <item>Your attitude determines your direction.</item>
     </string-array>
     <string-array name="quickspace_psa_random">
-        <item>ᱚᱜᱭᱟᱱᱛᱟ ᱯᱚᱨᱚᱢᱟᱱᱚᱸᱫᱼᱟ</item>
-        <item>ᱚᱱᱜᱟ ᱟᱹᱯᱰᱮᱴ ᱯᱷᱞᱟᱥ ᱨᱮᱭᱟᱜ ᱚᱠᱛᱚ ᱦᱩᱭᱮᱱᱟ ᱥᱮ?</item>
+        <item>Ignorance is Bliss</item>
+        <item>Is it time to flash another update already?</item>
         <item>Make peace, not war</item>
-        <item>ᱚ ᱭᱮ, ᱣᱷᱟᱹᱴᱥ ᱟᱹᱯ?</item>
-        <item>ᱟᱢᱟᱜ ᱠᱟᱹᱢᱤ ᱨᱮ ᱯᱷᱚᱠᱟᱹᱥ ᱢᱮ</item>
-        <item>ᱛᱤᱱᱟᱹᱝ ᱜᱟᱱ ᱥᱠᱨᱤᱱᱥᱚᱴ ᱮᱢ ᱤᱫᱤᱮᱫᱟ?</item>
-        <item>crDroid ᱥᱟᱞᱟᱜ ᱵᱮᱥ ᱡᱤᱱᱥᱤ ᱠᱷᱩᱞᱟᱫᱭ ᱢᱮ</item>
+        <item>Oh hey, what\'s up?</item>
+        <item>Focus on your tasks</item>
+        <item>How many screenshots do you take?</item>
+        <item>Open goodness with Naap</item>
         <item>Spread love, not havoc</item>
         <item>We didn\'t start the fire!</item>
-        <item>ᱵᱮᱥ ᱥᱮᱨᱮᱧ ᱞᱟᱹᱜᱤᱫ ᱚᱠᱛᱚ ᱚᱲᱚᱠ ᱢᱮ</item>
-        <item>\u003C\u003C\u003C\u003C\u003C\u003C\u003C ᱵᱚᱦᱚᱜ</item>
-        <item>ᱱᱚᱶᱟ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ crDroid ᱯᱨᱢᱤᱭᱟᱹᱢ ᱫᱚᱨᱠᱟᱨ ᱛᱟᱢ</item>
-        <item>ᱭᱩᱱᱤᱠᱚᱨᱱ ᱨᱮᱭᱟᱜ Lineage ᱩᱭᱦᱟᱹᱨ ᱠᱟᱜ ᱢᱮ</item>
-        <item>ᱵᱚᱲᱦᱟᱣ ᱠᱟᱱ ᱵᱽᱮᱴᱨᱭ ᱡᱤᱣᱚᱱ ᱥᱟᱞᱟᱜ ᱢᱚᱡᱽ ᱢᱮ</item>
-        <item>ᱜᱨᱟᱩᱸᱰ ᱡᱤᱨᱚ ᱥᱟᱞᱟᱜ ᱮᱦᱚᱵᱚᱜ  ᱠᱟᱱᱟ</item>
+        <item>Time for some good music</item>
+        <item>\u003C\u003C\u003C\u003C\u003C\u003C\u003C HEAD</item>
+        <item>You need Naap Premium to see this</item>
+        <item>Remember the Lineage of the Unicorn</item>
+        <item>Enjoy Xtended battery life</item>
+        <item>Starting from the ground zero</item>
         <item>We love you 3000</item>
         <item>Delicious even without Sushi</item>
-        <item>ᱛᱮᱦᱚᱧ ᱵᱮᱥ ᱡᱤᱱᱤᱥ ᱠᱚᱨᱟᱣ ᱢᱮ</item>
-        <item>ᱱᱚᱶᱟ ᱫᱚ ᱵᱮᱥ Pixel Experience ᱠᱟᱱᱟ,  ᱵᱟ ᱥᱮ?</item>
-        <item>ᱵᱷᱨᱚᱢ ᱵᱟᱝ ᱜᱮ, ᱚᱥᱚᱞ ᱛᱮ ᱛᱮ ᱥᱟᱹᱜᱩᱱ ᱫᱟᱨᱟᱢ!</item>
-        <item>ᱟᱢᱟᱜ ᱜᱚᱲᱚ ᱮᱢ ᱞᱟᱹᱜᱤᱫ ᱟᱭᱢᱟ ᱥᱟᱨᱦᱟᱣ </item>
-        <item>ᱥᱹᱨᱯᱥ ᱞᱟᱹᱜᱤᱫ ᱚᱠᱟ ᱯᱚᱨᱚᱵᱽ ᱦᱚᱸ ᱵᱟᱝᱟ - ᱠᱷᱟᱹᱞᱤ ᱯᱟᱹᱨᱯᱷᱮᱠᱥᱚᱱ!</item>
-        <item>ᱵᱤᱞᱰᱵᱚᱴ ᱨᱮᱭᱟᱜ ᱵᱮᱥ ᱵᱟᱪᱷᱟᱣ ᱠᱷᱚᱱ ᱢᱤᱫᱴᱟᱹᱝ</item>
-        <item>ᱟᱢᱟᱜ ᱯᱟᱨᱟᱱᱚᱤᱭᱟ ᱞᱟᱹᱜᱤᱫ ᱥᱟᱱᱤᱴᱭ</item>
-        <item>ᱵᱚᱨᱚᱯᱷ ᱰᱮᱥᱟᱹᱴᱠᱚ ᱪᱮᱥᱴᱟᱭ ᱢᱮ</item>
-        <item>ᱟᱹᱲᱤ ᱫᱩᱞᱟᱹᱲᱤᱭᱟᱹ ᱢᱟᱨᱠᱷᱤ, ᱵᱟ ᱥᱮ?</item>
-        <item>Evolution ᱫᱚ  ᱠᱟᱞᱯᱚᱱᱤᱠ ᱠᱟᱱᱟ, ᱥᱟᱹᱨᱤ ᱥᱮ?</item>
-        <item>ᱟᱢ ᱩᱱᱤ ᱠᱟᱱᱟᱢ ᱚᱠᱚᱭ ᱫᱚ ᱯᱷᱞᱟᱥ ᱮᱫ ᱟᱭ, ᱟᱞᱚᱢ ᱟᱹᱲᱩᱜᱼᱟᱢ</item>
-        <item>ᱟᱢᱟᱜ ᱢᱟᱹᱱᱮ ᱨᱮ ᱪᱮᱫ ᱢᱮᱱᱟᱜ-ᱟ?</item>
+        <item>Do something nice today</item>
+        <item>This is best Pixel Experience, isn\'t it?</item>
+        <item>No illusions, welcome to reality!</item>
+        <item>Thank you for your support</item>
+        <item>No festival for Derps - only perfection!</item>
+        <item>One of the buildbot\'s best picks</item>
+        <item>Sanity for your Paranoia</item>
+        <item>Try Ice Cold desserts</item>
+        <item>What a lovely experience, isn\'t it?</item>
+        <item>Evolution is a myth, right?</item>
+        <item>You are what you flash, don\'t be Potato</item>
+        <item>What\'s on your mind?</item>
         <item>Expecto Patronum</item>
         <item>Wubba Lubba Dub Dub</item>
-        <item>ᱡᱤᱛᱟᱹᱣ ᱮᱱᱟᱢ ᱡᱤᱛᱟᱹᱣ ᱮᱱᱟᱢ .... ?</item>
+        <item>Winner Winner ....?</item>
         <item>rm -rf \/</item>
         <item>Pringles aren\'t actually potato chips..</item>
         <item>Remember to check device\'s battery level!</item>
@@ -338,6 +384,7 @@
         <item>Check your to-do list if you have one.</item>
         <item>You can disable quickspace via home settings.</item>
     </string-array>
+
     <!-- QuickSpace: QuickEvent: Weather -->
     <string name="quick_event_ambient_weather_title">Weather update</string>
     <string name="quick_event_ambient_weather_summary">Display current weather update</string>
@@ -353,11 +400,6 @@
     <string name="quick_event_weather_city_summary">Display current weather location</string>
     <string name="quick_event_weather_text_title">Current condition</string>
     <string name="quick_event_weather_text_summary">Display current weather condition summary</string>
+
     <string name="intent_no_app_clock_found">Unable to find calendar or clock activity</string>
-    <!-- Freed memory on clear all tasks -->
-    <string name="freed_memory_text">Freed up %1$s</string>
-    <string name="optimal_memory_text">Your system is now in optimal condition</string>
-    <!-- Task lock -->
-    <string name="task_menu_item_unlock">Unlock</string>
-    <string name="task_menu_item_lock">Lock</string>
 </resources>
