--- a/res/xml/launcher_icons_preferences.xml
+++ b/res/xml/launcher_icons_preferences.xml
@@ -27,14 +27,14 @@
         android:key="themed_icon_pack"
         android:title="@string/themed_icons_category_title" />
 
-    <SwitchPreferenceCompat
+    <SwitchPreference
         android:key="pref_allapps_themed_icons"
         android:title="@string/pref_themed_icons_title"
         android:summary="@string/pref_themed_icons_summary"
         android:persistent="true"
         launcher:iconSpaceReserved="false" />
 
-    <SwitchPreferenceCompat
+    <SwitchPreference
         android:key="pref_forced_monochrome_icons"
         android:title="@string/pref_force_monochrome_themed_icons_title"
         android:summary="@string/pref_force_monochrome_themed_icons_summary"
