--- a/res/xml/launcher_misc_preferences.xml
+++ b/res/xml/launcher_misc_preferences.xml
@@ -38,10 +38,10 @@
         android:title="@string/background_blur_title"
         android:summary="@string/background_blur_summary"
         android:persistent="true"
-        android:max="125"
+        android:max="100"
         android:min="0"
-        settings:units="px"
-        android:defaultValue="125" />
+        settings:units="%"
+        android:defaultValue="75"/>
 
     <androidx.preference.PreferenceScreen
         android:persistent="false"
