--- a/quickstep/res/values/override.xml
+++ b/quickstep/res/values/override.xml
@@ -23,7 +23,7 @@
 
   <string name="main_process_initializer_class" translatable="false">com.android.quickstep.QuickstepProcessInitializer</string>
 
-  <string name="model_delegate_class" translatable="false">org.yaap.launcher.YaapLauncherModelDelegate</string>
+  <string name="model_delegate_class" translatable="false">com.naap.launcher.NaapLauncherModelDelegate</string>
 
   <string name="nav_handle_long_press_handler_class" translatable="false"></string>
 
