Launcher3: Move all prefs to categories

--- a/res/xml/launcher_misc_preferences.xml
+++ b/res/xml/launcher_misc_preferences.xml
@@ -16,4 +16,14 @@
     xmlns:launcher="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.launcher3">
 
+     <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+          android:key="pref_blur_depth"
+          android:title="@string/background_blur_title"
+          android:summary="@string/background_blur_summary"
+          android:persistent="true"
+          android:max="100"
+          android:min="23"
+          settings:units="px"
+          android:defaultValue="23" />
+
 </androidx.preference.PreferenceScreen>
