--- a/res/xml/launcher_icons_preferences.xml
+++ b/res/xml/launcher_icons_preferences.xml
@@ -16,4 +16,29 @@
     xmlns:launcher="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.launcher3">
 
+        <SwitchPreference
+            android:key="pref_forced_monochrome_icons"
+            android:title="@string/pref_force_monochrome_themed_icons_title"
+            android:summary="@string/pref_force_monochrome_themed_icons_summary"
+            android:defaultValue="false"
+            android:persistent="true" />
+
+        <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+            android:key="pref_custom_icon_size"
+            android:title="@string/icon_size_title"
+            android:persistent="true"
+            android:max="150"
+            android:min="50"
+            settings:units="%"
+            android:defaultValue="100" />
+
+        <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+            android:key="pref_custom_font_size"
+            android:title="@string/font_size_title"
+            android:persistent="true"
+            android:max="150"
+            android:min="50"
+            settings:units="%"
+            android:defaultValue="100" />
+            
 </androidx.preference.PreferenceScreen>
