--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -19,14 +19,14 @@
     xmlns:launcher="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.launcher3">
 
-   <SwitchPreferenceCompat
+   <SwitchPreference
         android:key="pref_drawer_search"
         android:title="@string/drawer_search_title"
         android:summary="@string/drawer_search_summary"
         android:defaultValue="true"
         launcher:iconSpaceReserved="false" />
 
-    <SwitchPreferenceCompat
+    <SwitchPreference
         android:key="pref_drawer_show_labels"
         android:title="@string/drawer_show_labels"
         android:defaultValue="true"
